--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <source src="./videos/video.mp4" type="video/mp4">
                 </video>
                 <div class="menu">
-                    <div><a href="">Home</a></div>
+                    <div><a href="">Início</a></div>
                     <div><a href="">Endereço</a></div>
                     <div><a href="">Contato</a></div>
                 </div>
